logo was shifting down with burger bar on smaller displays, the now it stays fixed

--- a/floodproject/static/css/styles.css
+++ b/floodproject/static/css/styles.css
@@ -31,18 +31,22 @@ p {
 
 
 .navbar-logo-container {
-    position: absolute;
+    position: fixed;
+    top: 0;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 60px;
+    z-index: 3;
+    pointer-events: none;
 }
 
 .navbar-logo {
     max-width: 300px;
     height: auto;
+    pointer-events: auto;
 }
 
 /* Media query for smaller screens */
@@ -57,6 +61,7 @@ p {
         max-width: 150px;
     }
 }
+
 
 /* Blue Line Below Navbar */
 .blue-line {
@@ -205,4 +210,3 @@ button.active {
     width: 100%;
 
 }
-
